# taskflow

./: .gitignore  .pre-commit-config.yaml  .taskflow.yml  README.md  coverage.xml  pyproject.toml  taskflow
.github/: ci.yml  publish.yml
.github/workflows/: ci.yml
.taskflow/backlog/: 0-now.md  3-next.md  done.md
backlog/: 0-now.md  1-blocked.md  2-paused.md  4-later.md  done.md
src/taskflow/: __init__.py  archive.py  cli.py  config.py  reports.py  setup_cmd.py  tasklib.py
tests/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_reports.py  test_tasklib.py
