[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskflow-git"
version = "0.3.6"
description = "Git-native task management for people who live in the terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Patrick McClory", email = "patrick@quorumsystems.io" }]
keywords = ["task-management", "git", "cli", "productivity", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[tool.setuptools.dynamic]
version = {attr = "taskflow_git.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=6.1.0",
]

[project.scripts]
taskflow = "taskflow.cli:main"

[project.urls]
Homepage = "https://github.com/quorum-systems/taskflow"
Repository = "https://github.com/quorum-systems/taskflow"
Issues = "https://github.com/quorum-systems/taskflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/taskflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=taskflow --cov-report=term-missing"

# ------------------------------------------------------------------
# Formatting / Linting
# ------------------------------------------------------------------

[tool.black]
line-length = 176
target-version = ["py312"]

[tool.ruff]
line-length = 176
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E741"]
